# spotify-adblock

./: .clippy.toml  .gitignore  Cargo.toml  Makefile.toml  README.md  config.toml  debug_run.sh  dori-2backend-test.md  dori-autostart-smoke.md  dori-cg-final.md  dori-cg-index-test.md  dori-codegraph-smoke.md  dori-refactor-test.md  rustfmt.toml
.agents/skills/spotify-adblock/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: spotify-adblock-instincts.yaml
.claude/skills/spotify-adblock/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: build.yml  release.yml
cef-sys/: Cargo.toml  README.md  build.rs
cef-sys/src/: lib.rs
spotify-adblock/: Cargo.toml
spotify-adblock/src/: config.rs  lib.rs
spotify-adblock/src/hooks/: memory.rs  mod.rs  network.rs  request_classification.rs  requests.rs  ssl.rs
spotify-adblock/src/hooks/rules/: ad.rs  ida.rs  matchers.rs  mod.rs  privacy.rs  tests.rs
src/: cef.rs  config.rs  lib.rs
src/hooks/: memory.rs  network.rs  requests.rs
