[package]
name = "spotify-adblock"
version = "1.0.3"
authors = ["coleleavitt"]
description = "Adblocker for Spotify"
edition = "2024"

[dependencies]
lazy_static = "*"
libc = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_regex = "*"
toml = "*"

[lib]
name = "spotifyadblock"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
panic = "abort"
